# aibot

./: .gitignore  Dockerfile  Makefile  README.MD  alembic.ini  app.py  config.py  di.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  requrements.txt  setup.py
alembic/: env.py
alembic/versions/: 2413902d3ce4_created_table.py  3b60372a4922_created_table.py  ce9bd35266ce_created_table.py  f4408b0193e1_initial.py  f799b9fc8336_initial.py  f8ea2e0e2949_.py
config/: .secrets.toml  ai_promt.txt  config.toml
infra/ai/: ai.py  chat_generator.py
routes/: ai.py  help.py  mid.py  setup.py
src/: app.py  config.py  di.py  main.py  setup.py
src/infra/ai/: ai.py  chat_generator.py
src/infra/sqlalchemy/: models.py
src/infra/user_resources/: users.py
src/routes/: ai.py  filter.py  help.py  setup.py
src/usecases/: ai.py
